# LLM-as-a-judge

./: README.md  experiment_log.md  mlflow.db
evaluation-pipeline/: .gitignore  README.md  mlflow.db  pyproject.toml
evaluation-pipeline/notebooks/: mlflow.db  prepare_datset.ipynb  prepare_datset_windguardmix.ipynb  run_experiments.ipynb  run_experiments_wjth_wb.ipynb
evaluation-pipeline/prompts/: baseline_halueval_v1.1.txt  baseline_harmbench_original.txt  baseline_harmbench_v1.txt  baseline_harmbench_v2.txt  baseline_harmless_v1.txt  baseline_safe_v1.txt  baseline_safety_v1.txt  baseline_safety_v2.txt  baseline_truthfulness_original.txt  baseline_truthfulness_v1.txt  baseline_truthfulness_v2.txt  baseline_truthfulness_v2_balanced.txt  baseline_truthfulness_v2_supported.txt  baseline_truthfulness_v3.txt  baseline_truthfulness_v4.txt  baseline_truthfulness_v5.txt  dynamic_harmbench_v1.txt  dynamic_harmbench_v2.txt  dynamic_truthfulness_tom_baseline _v1.txt  dynamic_truthfulness_tom_baseline.txt  dynamic_truthfulness_v1.txt  hint_truthfulness_v1.txt  prediction_harmbench_v1.txt  prediction_harmbench_v2.txt  prediction_truthfulness_original.txt  prediction_truthfulness_v2.txt  prediction_truthfulness_v3.txt  second_level_harmbench_v1.txt  second_level_harmbench_v2.txt  second_level_safe_v1.txt  second_level_safety_v1.txt  second_level_safety_v2.txt  second_level_safety_v3.txt  second_level_truthfulness_tom.txt  second_level_truthfulness_v1.txt  second_level_truthfulness_v2.txt  second_level_truthfulness_v3.txt  second_level_truthfulness_v4.txt  (+2 more)
papers/: README.md  (+2 more)
(+120 files in other folders)
