[project]
name = "evaluation-pipeline"
version = "0.1.0"
requires-python = ">=3.10"

description = "A pipeline for LLM-as-a-judge evaluations"
authors = [
    { name = "Esmo Morina", email = "esmo.morina@rwu.de" },
    { name = "Tatiana Malkina", email = "tatiana.malkina@rwu.de" }
]
dependencies = [
    "pandas",
    "tqdm",
    "jupyter",
    "ipykernel",
    "ollama",
    "datasets",
    "wandb",
    "scikit-learn",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"